<resources>
    <string name="app_name">TrojaNow</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_feed">TrojaNow</string>
    <string name="title_activity_register">New User</string>
    <string name="title_activity_post_thought">Post Thought</string>
    <string name="title_activity_photo">Photo</string>
    <string name="title_activity_sensor">Sensors</string>
    <string name="title_activity_location">Location</string>

    <string name="action_post">Post Thought</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>

    <string name="post_hint">What is on your mind?</string>
    <string name="sensor1">Temperature</string>
    <string name="sensor2">Light</string>
    <string name="sensor3">Pressure</string>
    <string name="sensor4">Humidity</string>
    <string name="switch_anonymous">Anonymous</string>

    <string name="button_add">Add</string>
    <string name="button_photo">Photo</string>
    <string name="button_location">Location</string>
    <string name="button_temperature">Sensor</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_post">Post</string>
    <string name="button_register">Register</string>

    <string name="sensor_cancel_button">Cancel</string>
    <string name="sensor_info_button">Add</string>

    <string name="label_city">City</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_latitude">Latitude</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="label_include">Include</string>
    <string name="text_empty" />

</resources>
